# apisnap

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.toml.example  p.md  pyproject.toml  test_yaml.py
.github/workflows/: publish.yml  test.yml
docs/: usage.md
docs/diagrams/: diagram_01_system_overview.md  diagram_02_data_flow.md  diagram_03_github_repo_pattern.md  diagram_04_cli_modes.md  diagram_05_ai_pipeline.md  diagram_06_route_manifest.md
docs/learning/: apisnap-api-test-generation-guide.md  poc-learnings.md
src/apisnap/: __init__.py  __main__.py  cli.py  config.py  schema.py
src/apisnap/ai/: __init__.py  client.py  prompts.py
src/apisnap/scanner/: __init__.py  base.py  detector.py  schema_inferrer.py
src/apisnap/scanner/remote/: __init__.py  crawl_scanner.py  github_repo_scanner.py  json_scanner.py  openapi_scanner.py
src/apisnap/scanner/source/: __init__.py  django_scanner.py  express_scanner.py  fastapi_scanner.py  flask_scanner.py  gin_scanner.py  rails_scanner.py  spring_scanner.py
src/apisnap/utils/: __init__.py  display.py  http.py
src/apisnap/writers/: __init__.py  base_writer.py  httpx_writer.py  jest_writer.py  mocha_writer.py  pytest_writer.py  restassured_writer.py  rspec_writer.py  unittest_writer.py  vitest_writer.py
tests/: test_ai_client.py  test_detector.py  test_fastapi_scanner.py  test_github_repo_scanner.py  test_openapi_scanner.py  test_schema.py  test_schema_inferrer.py
tests/fixtures/: sample_data_file.json  sample_github_repo_tree.json  sample_openapi.json  sample_workflow.yml
